syntax = "proto3";

option go_package = "github.com/forest-guardian/forest-guardian-api-poc/internal/delta/protobufs";

service ClearAndSmoothService {
    rpc ClearAndSmooth (ClearAndSmoothRequest) returns (ClearAndSmoothResponse);
}
message ClearAndSmoothRequest {
    map<string, DoubleList> data = 1;
}

message ClearAndSmoothResponse {
    map<string, DoubleList> smoothed_data = 1;
}

message DoubleList {
    repeated double values = 1;
}
